--- a/OnTableView/Base.lproj/Main.storyboard
+++ b/OnTableView/Base.lproj/Main.storyboard
@@ -145,6 +145,15 @@
                                     <segue destination="Vcf-J2-b04" kind="show" identifier="alarmSegue" id="su9-Z5-1Nt"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SeQ-h1-LiU">
+                                <rect key="frame" x="21" y="136" width="103" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="openPhotos"/>
+                                <connections>
+                                    <action selector="Photos:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X7P-jF-ORz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
