--- a/OnTableView/Base.lproj/Main.storyboard
+++ b/OnTableView/Base.lproj/Main.storyboard
@@ -154,6 +154,15 @@
                                     <action selector="Photos:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X7P-jF-ORz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NkA-gj-I2d">
+                                <rect key="frame" x="121" y="102" width="88" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="takePhoto"/>
+                                <connections>
+                                    <action selector="camera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qbj-uP-Ukd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -244,6 +253,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="UXK-yq-YQe"/>
+        <segue reference="uFm-mI-ESQ"/>
     </inferredMetricsTieBreakers>
 </document>
